# CC_Ruler_Plugin

./: CMakeLists.txt  CreateRulerPlugin.cpp  CreateRulerPlugin.h  CreateRulerPlugin.qrc  README.md  info.json
